[project]
name = "seaice_ecdr"
version = "0.1.0"

[tool.bumpversion]
current_version = "0.1.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "seaice_ecdr/__init__.py"
search   = '__version__ = "v{current_version}"'
replace  = '__version__ = "v{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.black]
target-version = ["py310"]


[tool.vulture]
paths = ["seaice_ecdr"]
min_confidence = 80


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-fixable = ["I"]
extend-select = ["I"]

ignore = [
  # D1: Ignore errors requiring docstrings on everything.
  # D203: "1 blank line required before class docstring"
  # D213: "Multi-line docstring summary should start at the second line"
  # E731: Lambda assignments are OK, use your best judgement.
  # RUF010: !a, !r, !s are too magical for me.
  "D1", "D203", "D213", "E731", "RUF010",
]

[tool.ruff.lint.isort]
known-first-party = ["seaice_ecdr"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.pytest.ini_options]
testpaths = [
  "seaice_ecdr/tests/",
]

filterwarnings = [
  "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.mypy]
python_version = "3.10"
packages = ["seaice_ecdr"]
incremental = true
strict = false
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["numpy.typing.mypy_plugin", ]

[[tool.mypy.overrides]]
module = [
  "invoke.*",
  "matplotlib.*",
  "cartopy.*",
  "scipy.*",
  "sklearn.*",
  "h5py.*",
  "pandas.*",
  "pyresample.*",
  "setuptools.*",
  "netCDF4.*",
  "rasterio.*",
  "yaml.*",
  "cv2.*",
  "ruamel.*",
]
ignore_missing_imports = true
